# web_site_ut

./: CLAUDE.md  README.md  main.py  pyproject.toml
prompts/: anti_crawler_specialist.json  crawler_test_prompt.json  flexible_website_generator.json  merchant_website_generator.json
src/: __init__.py  environment_builder.py  main.py  openai_connector.py  prompt_reader.py  website_generator.py
